--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 /Front/ActivosFijos/nbproject/private/
 /Front/Activosfijos/nbproject/private/
+/Front/Activosfijos/build/
+/Front/Activosfijos/dist/
